content/documentation/mocha/5.5.2/UserGuide/en_US/mochapro_plugin.adoc

== Using the mocha Pro and mocha VR Plugins [[mocha_plugin]]


The *mocha Pro* and *mocha VR* plugins are separate applications from the standalone mocha that can be applied as an effect directly onto layers in host applications.

This reduces the need to swap out of your host application and streamlines getting data in and out of mocha.

Apart from a few minor differences, the *mocha Pro* and *mocha VR* plugins are the same as the standalone versions. You can still track, roto, render, import, export and so on all inside the mocha GUI.

The biggest advantage is you can set up layers and module settings in mocha as normal, and then have the results render directly to the host timeline without having to export.

In addition to the controls below, the *mocha VR* plugin also contains a separate area in the Module Renders section to control lens distortions without having to first open the *mocha VR* GUI:

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.5.0_mochavr_360_adobe_plugin_interface.jpg[width="60%"]

NOTE: The guides below are using examples of the *mocha Pro* plugin. +
For more information on using the mocha VR Plugin, see <<mochavr_workflow, mocha VR: Using mocha for 360 workflow>>

=== Applying the mocha Plugin for Adobe After Effects

The mocha Pro Plugin for Adobe appears in the Effects menu like every other effect.
Simply apply the effect to the layer you want to work with.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.2.0_mochapro_ae_plugin_full_interface.jpg[width="60%"]

The general workflow for the mocha Adobe Plugin is as follows:

. Select any additional source layers you want to use inside mocha
. Launch mocha. This will load a full version of the mocha interface that you can use just like the standalone version.
. Use mocha as required and then close and save. No rendering is required inside mocha unless you want to.
. Choose whether you want to use mattes, renders or any other data from mocha back in the plugin interface.

==== Using the mocha GUI

Once you have applied the mocha Pro effect, you can click on the mocha button to launch the main interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ae_plugin_launch_mocha.jpg[width="60%"]

This then becomes exactly like working in the standalone version of mocha, with a few exceptions.
First, you will notice you don't need to set up a project like in the standalone version. The source layer is automatically loaded and ready to track in the view.
Secondly you don't need to save out a project file (unless you want to export it). You just close and save the mocha view when done and the project is saved inside the Effect like any other Adobe effect.
For further details on how to use anything inside the mocha GUI, see the rest of the User Guide!

NOTE: The mocha Pro Plugin interface is almost exactly the same as the standalone interface, so most of the usual guide and video tutorials can be applied to the plugin.

==== Controlling Mattes

Once you have tracked layers in mocha, you can then control the mattes for these layers back in the plugin interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ae_plugin_matte_section.jpg[width="60%"]

* *View Matte:* Show the black and white matte from the mocha layers chosen. This is very useful if you want to just see any problems with the matte, or you want to use the output as a track matte.
* *Apply Matte:* Applies the chosen mattes to the current layer,
* *Visible Layers:* This button launches the Visible Layers dialog so you can select the layers you want visible as mattes.
* *Shape:* This drop down lets you switch between All Visible and All mattes. All Visible mattes are controlled by the Visible Layers dialog.
* *Feather:* Applies a blur to the matte. This feathering is independent of the feathering of the individual layers inside mocha.
* *Invert Mask:* Inverts the currently visible mattes.
* *Create AE Mask:* Creates native AE splines on the effect layer just like "Paste mocha mask". This function is only available in After Effects.


==== Controlling Module Renders

Once you have set up layers in mocha, you can then control the renders for each module back in the plugin interface.
Note that you do need to have set up and tracked the correct layers in order for a render to work back in the host.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ae_plugin_renders_section.jpg[width="60%"]

You have the following options to render a module back in the plugin:

* *Render:* A simple checkbox to turn renders on and off.
* *Module:* The module render you want to see. You have options of 'Insert: Composite', 'Insert: Cutout', 'Remove', 'Stabilize', 'Lens: Distort' and 'Lens: Undistort'.
* *Insert Layer:* For any inserts you want to apply to a layer surface and render back to the host.

===== Rendering Insert Layers

To use the Insert Layer in Insert renders:

. Pick the layer you want to use as an insert from the 'Insert Layer' drown down in the mocha Pro effect
. Launch the mocha GUI
. Create a layer (or pick an existing layer)
. On the Layer Properties panel, choose the 'Insert Clip' dropdown
. Select 'Insert Layer'

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_gui_plugin_insert_layer.jpg[width="60%"]

Your Insert should then appear inside the layer where you have placed your surface.

==== Controlling Tracking Data

If you have a tracked layer in mocha you can see the output of its surface back in the After Effects interface.
Each point in the Tracking Data section is a point from the layer surface that automatically updates when you modify it inside mocha.

To choose a layer to create tracking data from, click the 'Create Track Data' button in the Tracking Data section of the plugin.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.2.0_mochapro_ae_plugin_tracking_data_section.jpg[width="60%"]

Then choose the layer you want to read tracking data from in the dialog that appears. You can only choose one layer at a time.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ae_plugin_tracking_data_dialog.jpg[width="60%"]

Once you click okay, the plugin will generate keyframes to populate the tracking parameters in the plugin. You can then use this data to copy to other layers, or link via expressions.

This option is only available in the After Effects version of the plugin.

WARNING: Generating keyframe data can take some time for very long shots. You can cancel generation at any time when the progress bar appears.

==== Applying Tracking Data Exports to Other layers

The plugin interface also allows you to apply tracking data to other layers without needing to export from the mocha GUI.
Do do this, you generate the tracking data from a layer, as described above in Controlling Tracking Data.

You can then choose an export option at the bottom of the Tracking Data section:

* *Corner Pin:* A standard corner pin effect
* *Corner Pin:* (Support Motion Blur): A corner pin distortion with separate scale, rotation and position.
* *Transform:* Scale, position and rotation

Clicking 'Apply Export' then copies the information to the specified layer.


=== Applying the mocha Plugin for Adobe Premiere

The mocha Pro Plugin for Adobe appears in the Effects menu like every other effect.
Simply apply the effect to the layer you want to work with.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_premiere_plugin_full_interface.jpg[width="60%"]

The general workflow for the mocha Adobe Plugin is as follows:

. Select any additional source layers you want to use inside mocha
. Launch mocha. This will load a full version of the mocha interface that you can use just like the standalone version.
. Use mocha as required and then close and save. No rendering is required inside mocha unless you want to.
. Choose whether you want to use mattes, renders or any other data from mocha back in the plugin interface.

NOTE: The mocha Pro Plugin interface is almost exactly the same as the standalone interface, so most of the usual guide and video tutorials can be applied to the plugin.

==== Using the mocha GUI

Once you have applied the mocha Pro effect, you can click on the mocha button to launch the main interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_premiere_plugin_launch_mocha.jpg[width="60%"]

This then becomes exactly like working in the standalone version of mocha, with a few exceptions.
Firstly, you will notice you don't need to set up a project like in the standalone version. The source layer is automatically loaded and ready to track in the view.
Secondly you don't need to save out a project file (unless you want to export it). You just close and save the mocha view when done and the project is saved inside the Effect like any other Adobe effect.
For further details on how to use anything inside the mocha GUI, see the rest of the User Guide!

==== Controlling Mattes

Once you have tracked layers in mocha, you can then control the mattes for these layers back in the plugin interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_premiere_plugin_matte_section.jpg[width="60%"]

* *View Matte:* Show the black and white matte from the mocha layers chosen. This is very useful if you want to just see any problems with the matte, or you want to use the output as a track matte.
* *Apply Matte:* Applies the chosen mattes to the current layer,
* *Visible Layers:* This button launches the Visible Layers dialog so you can select the layers you want visible as mattes.
* *Shape:* This drop down lets you switch between All Visible and All mattes. All Visible mattes are controlled by the Visible Layers dialog.
* *Feather:* Applies a blur to the matte. This feathering is independent of the feathering of the individual layers inside mocha.
* *Invert Mask:* Inverts the currently visible mattes.

==== Controlling Module Renders

Once you have set up layers in mocha, you can then control the renders for each module back in the plugin interface.
Note that you do need to have set up and tracked the correct layers in order for a render to work back in the host.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_premiere_plugin_renders_section.jpg[width="60%"]

You have the following options to render a module back in the plugin:

* *Render:* A simple checkbox to turn renders on and off.
* *Module:* The module render you want to see. You have options of 'Insert: Composite', 'Insert: Cutout', 'Remove', 'Stabilize', 'Lens: Distort' and 'Lens: Undistort'.
* *Insert Layer:* For any inserts you want to apply to a layer surface and render back to the host.

===== Rendering Insert Layers

To use the Insert Layer in Insert renders:

. Pick the video track you want to use as an insert from the 'Insert Layer' drown down in the mocha Pro effect
. Launch the mocha GUI
. Create a layer (or pick an existing layer)
. On the Layer Properties panel, choose the 'Insert Clip' dropdown
. Select 'Insert Layer'

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_gui_plugin_insert_layer.jpg[width="60%"]

Your Insert should then appear inside the layer where you have placed your surface.

<<<

=== Applying the mocha Plugin for Avid Media Composer

IMPORTANT: Due to extensive frame access by the mocha plugin, it is recommended that you use Avid storage media (i.e. DNxHD) when working, rather than linked files. +
(Use of linked files which use codecs such as H.264 will significantly slow down render time as such media is not designed for random access.)

The mocha Pro Plugin for Adobe appears in the Effects menu like every other effect.
Simply apply the effect to the layer you want to work with.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_avid_plugin_full_interface.jpg[width="60%"]

The general workflow for the mocha Adobe Plugin is as follows:

. Select any additional source layers you want to use inside mocha
. Launch mocha. This will load a full version of the mocha interface that you can use just like the standalone version.
. Use mocha as required and then close and save. No rendering is required inside mocha unless you want to.
. Choose whether you want to use mattes, renders or any other data from mocha back in the plugin interface.

NOTE: The mocha Pro Plugin interface is almost exactly the same as the standalone interface, so most of the usual guide and video tutorials can be applied to the plugin.


==== Using the mocha GUI

Once you have applied the mocha Pro effect, you can click on the mocha button to launch the main interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_avid_plugin_launch_mocha.jpg[width="60%"]

This then becomes exactly like working in the standalone version of mocha, with a few exceptions.
Firstly, you will notice you don't need to set up a project like in the standalone version. The source layer is automatically loaded and ready to track in the view.
Secondly you don't need to save out a project file (unless you want to export it). You just close and save the mocha view when done and the project is saved inside the Effect like any other AVX effect.
For further details on how to use anything inside the mocha GUI, see the rest of the User Guide!

==== Controlling Mattes

Once you have tracked layers in mocha, you can then control the mattes for these layers back in the plugin interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_avid_plugin_matte_section.jpg[width="60%"]

* *View Matte:* Show the black and white matte from the mocha layers chosen. This is very useful if you want to just see any problems with the matte, or you want to use the output as a track matte.
* *Apply Matte:* Applies the chosen mattes to the current layer,
* *Visible Layers:* This button launches the Visible Layers dialog so you can select the layers you want visible as mattes.
* *Visible Layers Dropdown:* This drop down lets you switch between All Visible and All mattes. All Visible mattes are controlled by the Visible Layers dialog.
* *Feather:* Applies a blur to the matte. This feathering is independent of the feathering of the individual layers inside mocha.
* *Invert Matte:* Inverts the currently visible mattes.

==== Controlling Module Renders

Once you have set up layers in mocha, you can then control the renders for each module back in the plugin interface.
Note that you do need to have set up and tracked the correct layers in order for a render to work back in the host.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_avid_plugin_renders_section.jpg[width="60%"]

You have the following options to render a module back in the plugin:

* *Render:* A simple checkbox to turn renders on and off.
* *Module:* The module render you want to see. You have options of 'Insert: Composite', 'Insert: Cutout', 'Remove', 'Stabilize', 'Lens: Distort' and 'Lens: Undistort'.
* *Insert Layer:* For any inserts you want to apply to a layer surface and render back to the host. Choose from the current layer or below the current video track.

IMPORTANT: Processing larger frame sizes and more complex rendering in mocha may take a long time per frame. +
When a frame render exceeds a certain interval in Media Composer, a BlipPlayer error can occur. +
If you see this message, you should render the effect prior to playing back, or preview the render inside the mocha UI before rendering back on the timeline.

===== Rendering Insert Layers

To use the Insert Layer in Insert renders:

. Pick the video track you want to use as an insert from the 'Insert Layer' drown down in the mocha Pro effect. This will most commonly be "1st Below" the current layer with the effect applied.
. Launch the mocha GUI
. Create a layer (or pick an existing layer)
. On the Layer Properties panel, choose the 'Insert Clip' dropdown
. Select 'Insert Layer'

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_gui_plugin_insert_layer.jpg[width="60%"]

Your Insert should then appear inside the layer where you have placed your surface.


=== Applying the mocha OFX Plugin

NOTE: The OFX version of the mocha Plugin is fully supported in Nuke, Fusion, HitFilm Pro, Vegas Pro and Silhouette.

If you have a license for the OFX version it will work in any of the OFX hosts listed below.
Keep in mind that while the mocha OFX plugin is designed to be used in multiple applications, it does not support all OFX hosts.

In many cases some functionality may be possible for unsupported hosts, but there is no guarantee of functionality or stability, so please take care when experimenting!

=== Adding the mocha Plugin inside The Foundry Nuke

Inside Nuke, the mocha Pro Plugin for OFX appears in the toolbar menu like every other effect.

You can also call the mocha Pro effect from the Tab key by searching for 'mocha Pro' or right-click and choose 'mocha by Imagineer Systems' > 'mocha Pro'.


_mocha Pro node in Nuke node graph (Footage courtesy of Chris Heuer):_

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_node_graph.jpg[width="60%"]

Once loaded into the node graph, simply plug the image node you want to work with into the 'Source' input of the mocha Pro effect node.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_full_interface.jpg[width="60%"]


=== Adding the mocha Plugin inside Blackmagic Fusion Studio

Inside Fusion Studio, the mocha Pro Plugin for OFX appears in the Tool menu like every other effect.
Just choose 'mocha by Imagineer Systems' > 'mocha Pro'.

_mocha Pro node in Fusion (Footage courtesy of Chris Heuer):_

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_fusion_plugin_flow_graph.jpg[width="60%"]

Once loaded into the flow graph, simply plug the image node you want to work with into the 'Source' input of the mocha Pro effect node.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_fusion_plugin_full_interface.jpg[width="60%"]


=== Adding the mocha Plugin inside SilhouetteFX Silhouette

Silhouette v6 introduced OFX support, so the mocha Pro Plugin for OFX appears in the nodes menu like every other effect.
Just choose 'Mocha by Imagineer Systems' > 'mocha Pro'.

_mocha Pro node in Silhouette:_

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.2.1_mochapro_ofx_silhouette_plugin_trees_window.jpg[width="60%"]

Once loaded into the tree window, simply plug the image node you want to work with into the 'Source' input of the mocha Pro effect node.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.2.1_mochapro_ofx_silhouette_plugin_full_interface.jpg[width="60%"]

==== Linear Workflow

Silhouette v6 includes Linear support for the mocha plugin.
If you are using rec709 8-bit images, you need to enable the 'Mocha > Linearize Images In Mocha Pro' preference in Silhouette so images look correct in the mocha GUI.
When using EXR or Cineon images, this preference should remain off.

=== Adding the mocha Plugin inside Vegas Pro

Inside Vegas Pro, the mocha OFX Plugin appears under 'Mocha by Imagineer Systems' in the Plug-in Chooser dialog for the following effect chains:

* *Event FX:* Click the effect icon on the video event segment you want and then select the mocha effect and click OK.
* *Track FX:* Click the effect icon on the appropriate video track and then select the mocha effect and click OK.
* *Track Composite Mode:* Choose 'Custom...' in the Compositing Mode options then select the mocha effect and click OK.

_mocha Pro node in Vegas Plug-in Chooser:_

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.5.2_mochapro_ofx_vegas_plugin_chooser.jpg[width="40%"]

Once loaded, you can begin with the 'Launch mocha UI' button at the top of the effect panel.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.5.2_mochapro_ofx_vegas_plugin_full_interface.jpg[width="40%"]

==== Using the Insert Layer clip in Vegas [[vegas_insert_method]]

Mocha uses two sources from the timeline for inserting clips: The main background image source to track from and a secondary image source to insert into a tracked layer.

To use a secondary source input in Vegas for Insert clips you need to composite your tracks together:

. Set the Insert clip you want to use as the parent layer and the plate you want the insert to be rendered over as the child
. Click the Track Compositing mode on the parent insert layer and select 'Custom...' +
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.5.2_mochapro_ofx_vegas_plugin_insert_layer_setup.jpg[width="60%"]
. Select the mocha effect and click OK
. Launch the mocha GUI in the Composite Mode panel

This will then load the secondary source into any layer Insert clip dropdown as a clip called 'Insert Layer'. See <<rendering_insert_layers, Rendering Insert Layers>> below.

=== Basic workflow for the mocha OFX Plugin

One your source clip is hooked up to you mocha Pro Effect, the general workflow for the mocha OFX Plugin is as follows:

. Select any additional source you want to use as an insert in mocha and plug it into the 'Insert' input (See <<rendering_insert_layers, Rendering Insert Layers>> below.)
. Launch the mocha UI using the button at the top of the panel. This will load a full version of the mocha interface that you can use just like the standalone version.
. Use mocha as required and then close and save. No rendering is required inside mocha unless you want to.
. Choose whether you want to use mattes, renders or any other exported data from mocha back in the plugin interface.

NOTE: The mocha Pro Plugin interface is almost exactly the same as the standalone interface, so most of the usual guide and video tutorials can be applied to the plugin.
Plugin interface examples below use the Nuke UI.

=== Using the mocha GUI

Once you have applied the mocha Pro effect, you can click on the 'Launch mocha UI' button to launch the main interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_launch_mocha.jpg[width="60%"]

This then becomes exactly like working in the standalone version of mocha, with a few exceptions.
Firstly, you will notice you don't need to set up a project like in the standalone version. The source layer is automatically loaded and ready to track in the view.
Secondly you don't need to save out a project file (unless you want to export it). You just close and save the mocha view when done and the project is saved inside the effect.
For further details on how to use anything inside the mocha GUI, see the rest of the User Guide!

=== Controlling Mattes

Once you have tracked layers in mocha, you can then control the mattes for these layers back in the plugin interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_matte_section.jpg[width="60%"]

* *View Matte:* Show the black and white matte from the mocha layers chosen. This is very useful if you want to just see any problems with the matte, or you want to use the output as a track matte.
* *Apply Matte:* Applies the chosen mattes to the source node.
* *Visible Layers Button:* This button launches the Visible Layers dialog so you can select the layers you want visible as mattes.
* *Visible layers Dropdown:* This drop down lets you switch between All Visible and All mattes. All Visible mattes are controlled by the Visible Layers dialog.
* *Feather:* Applies a blur to the matte. This feathering is independent of the feathering of the individual layers inside mocha.
* *Invert Matte:* Inverts the currently visible mattes.

=== Controlling Module Renders [[ofx_module_renders]]

Once you have set up layers in mocha, you can then control the renders for each module back in the plugin interface.
Note that you do need to have set up and tracked the correct layers in order for a render to work back in the host.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_renders_section.jpg[width="60%"]

You have the following options to render a module back in the plugin:

* *Render:* A simple checkbox to turn renders on and off.
* *Module:* The module render you want to see. You have options of 'Insert: Composite', 'Insert: Cutout', 'Remove', 'Stabilize', 'Lens: Distort' and 'Lens: Undistort'.

=== Rendering Insert Layers [[rendering_insert_layers]]

You can use secondary clips in the host application to render tracked inserts into your shots.
See the User Guide Chapter on the <<insert_module, Insert Module>> for more details on manipulating and warping inserts.

To use the Insert input from your host application in Insert renders:

. Pick the image you want as an insert and make it available for the mocha plugin to use:
** For node based compositors you can plug the insert image into the 'Insert' input on the the mocha Pro effect node.
** In Vegas you need to make the insert image the parent in compositing mode. See <<vegas_insert_method, Using the Insert Layer clip in Vegas>> for this method.
** In HitFilm, you select the insert image from one of your other layers in the comp listed in the "Insert" dropdown
. Launch the mocha GUI
. Create a layer (or pick an existing layer)
. On the Layer Properties panel, choose the 'Insert Clip' dropdown
. Select 'Insert Layer'

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_gui_plugin_insert_layer.jpg[width="60%"]

Your Insert should then appear inside the layer where you have placed your surface.

Alternatively you can import an image or sequence directly to the plugin:

. Launch the mocha GUI
. Create a layer (or pick an existing layer)
. On the Layer Properties panel, choose the 'Insert Clip' dropdown
. Select 'Import'
. Import an image or image sequence

The imported Insert should then appear inside the layer where you have placed your surface.

=== Dealing with Alpha Channel Input and Output

In cases where your input source has an alpha channel, you may wish to change the Alpha view inside the mocha GUI.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ofx_nuke_plugin_alpha_view.jpg[width="60%"]

You can either turn Alpha off entirely by toggling off the button, or choose from one of the following options:

* *Auto alpha:* Reads in alpha if it is not opaque or premultiplied. This is the default setting.
* *Source alpha:* This option shows the alpha as given from the source.

Auto alpha may be necessary when working with some source inputs in Nuke.

When rendering back out to the host, there are cases where you may also need to premultiply the alpha using the premultiply options in the plugin interface.

In these cases you can choose an option from the 'Premultiply' dropdown:

* *Auto:* Premultiplies based on the original source input
* *On:* Always premultiply output
* *Off:* Never premultiply output

You can also choose to premultiply using standard premultiply nodes.

=== Applying the mocha HitFilm, mocha Pro or mocha VR Plugin inside HitFilm

We now include a light version of mocha, called mocha Hitfilm, as a plugin in HitFilm Pro 2017 onwards. This includes:

* Tracking and roto export for HitFilm
* 3D Camera solving
* Matte rendering

However, you can also use the mocha Pro and mocha VR OFX plugins in the HitFilm interface.

==== Adding the mocha Plugin to a layer

To add mocha, simply locate it in the Effects panel like any other effect and drag it onto your layer.

_mocha HitFilm Effect Controls in a HitFilm comp:_

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.1.1_mocha_hitfilm_plugin_full_interface.jpg[width="60%"]

==== Basic workflow for the mocha Plugin in HitFilm

Once your layer is hooked up to your mocha Effect, the general workflow for the mocha Plugin is as follows:

. Launch the mocha UI using the 'Launch mocha UI' button at the top of the panel. This will load a full version of the mocha interface that you can use just like the standalone version.
. Use mocha as required
. Export any data if needed (tracks, shapes or camera solve data) then close and save
. Choose any mattes you want to use from mocha back in the plugin interface
. If you are using mocha Pro or mocha VR, choose renders you wish to use from the "Module Renders" section and check "Render"

NOTE: The mocha HitFilm Plugin interface is almost exactly the same as the standalone interface, so most of the usual guide and video tutorials can be applied to the plugin.

==== Using the mocha GUI

Once you have applied the mocha effect, you can click on the 'Launch mocha UI' button to launch the main interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.1.1_mocha_hitfilm_plugin_launch_mocha.jpg[width="60%"]

This then becomes exactly like working in the standalone version of mocha, with a few exceptions.

First, you will notice you don't need to set up a project like in the standalone version. The source layer is automatically loaded and ready to track in the view.

Secondly, you don't need to save out a project file (unless you want to export it). You just close and save the mocha view when done and the project is saved inside the effect.

For further details on how to use anything inside the mocha GUI, see the rest of the User Guide!

==== Controlling Mattes

Once you have tracked layers in mocha, you can then control the mattes for these layers back in the plugin interface.

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.1.1_mocha_hitfilm_plugin_matte_section.jpg[width="60%"]

* *View Matte:* Show the black and white matte from the mocha layers chosen. This is very useful if you want to just see any problems with the matte, or you want to use the output as a track matte.
* *Apply Matte:* Applies the chosen mattes to the source node.
* *Visible Layers Button:* This button launches the Visible Layers dialog so you can select the layers you want visible as mattes.
* *Visible layers Dropdown:* This drop down lets you switch between All Visible and All mattes. All Visible mattes are controlled by the Visible Layers dialog.
* *Feather:* Applies a blur to the matte. This feathering is independent of the feathering of the individual layers inside mocha.
* *Invert Matte:* Inverts the currently visible mattes.

==== Controlling mocha renders in HitFilm

If you are using the mocha Pro or mocha VR version of the plugin, controlling renders is exactly like the standard OFX rendering controls.

See <<ofx_module_renders, Controlling Renders>> and  <<rendering_insert_layers, Rendering Insert Layers>> in the section above.
